📝 Update MongoDB connection string

--- a/server/.env.example
+++ b/server/.env.example
@@ -2,8 +2,8 @@
 PORT=10000
 NODE_ENV=production
 
-# Database (MongoDB Atlas)
-MONGODB_URI=mongodb+srv://NishantSharma:13Asurya@cluster0.jszrpme.mongodb.net/styleforge?retryWrites=true&w=majority&appName=Cluster0
+# Database (MongoDB Atlas - NEW CLUSTER)
+MONGODB_URI=mongodb+srv://nishant:139Asurya@cluster0.jzp5s0j.mongodb.net/styleforge?retryWrites=true&w=majority&appName=Cluster0
 
 # Client URL (Vercel Frontend)
 CLIENT_URL=https://styleforge-rosy.vercel.app
